fix overflow

--- a/main.scss
+++ b/main.scss
@@ -35,6 +35,7 @@ html {
   height: 100vh;
   font-size: 12px;
   margin: 0;
+  overflow-x: hidden;
 }
 
 nav {
